Closed Bug 132022 Opened 22 years ago Closed 22 years ago

[FIX]fails to print, 100% cpu utilitisation (hang) with some scale settings only?

Categories

(Core :: Printing: Output, defect)

x86
All
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla1.0

People

(Reporter: cpmi, Assigned: rods)

References

()

Details

(Keywords: hang)

Attachments

(1 file)

From Bugzilla Helper:
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:0.9.9) Gecko/20020311
BuildID:    2002031104

when killed printer dialog pops up displaying 0 bytes output after minutes of
waiting...

Reproducible: Always
Steps to Reproduce:
1. select site: http://www.eweek.com/print_article/0,3668,a=24242,00.asp
2. page setup: 67% (i scan better with small type)
3. press print button
Confirmed linux cvs 2002-03-19, os->all
Hangs after pressing print button. Does not hang without step 2 (zoom). I tested
with printing to .ps file, the resulting file has exactly 32k of output. Tested
67% -> hang; 140% -> no hang; 50% -> hang
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: hang
OS: Windows 2000 → All
Summary: fails to print, 100% cpu utilitisation → fails to print, 100% cpu utilitisation (hang) with some scale settings only?
Status: NEW → ASSIGNED
Keywords: nsbeta1
Target Milestone: --- → mozilla1.0
Attached patch patchSplinter Review
The patch in nsPageFrame.cpp is insurance to help keep a problem like this from
hanging the browser again.

The patch in nsSimplePageSequence.cpp is the actual fix. I verified that
nsPageFrame patch will stop it from happening.
I also tested this with absolutely positioning an iframe at 0,0
Summary: fails to print, 100% cpu utilitisation (hang) with some scale settings only? → [FIX]fails to print, 100% cpu utilitisation (hang) with some scale settings only?
nsbeta1+
Keywords: nsbeta1nsbeta1+
Comment on attachment 75005 [details] [diff] [review]
patch

r=dcone.  I would really comment how you get that the number of twips per
pixel.
Attachment #75005 - Flags: review+
Attachment #75005 - Flags: superreview+
Comment on attachment 75005 [details] [diff] [review]
patch

sr=attinasi
Comment on attachment 75005 [details] [diff] [review]
patch

a=scc
Attachment #75005 - Flags: approval+
fixed
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
verif on linux cvs 2002-03-20, ran same tests as before, no hang.
marking verified per comments. Edward, REOPEN this if it is still not
fixed for you. try in latest build.

thanks.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: