The patch in nsPageFrame.cpp is insurance to help keep a problem like this from hanging the browser again. The patch in nsSimplePageSequence.cpp is the actual fix. I verified that nsPageFrame patch will stop it from happening. Bug 132022 r=dcone a=attinasi a=scc